--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@ a
 {
     max-width: 450px;
     margin: auto;
+    
 }
 .searchbox
 {
@@ -111,5 +112,36 @@ a
     letter-spacing: 1px;
 }
 
+.toggle-switch
+{
+    background-color: black;
+    width: 4rem;
+    cursor: pointer;
+    border-radius: 5px;
+
+}
+
+.switch
+{
+    color: white;
+    text-align: center;
+    transition: all 0.3s ease;
+}
+
+.bi{
+    font-size: 1.6rem;
+} 
+
+.on
+{
+    color: black;
+   
+}
+
+.off
+{
+   
+    color: white;
+}
 
 
