--- a/src/App.css
+++ b/src/App.css
@@ -28,12 +28,19 @@
     font-size: 1.1rem;
 }
 
+.blue
+{
+    color: blueviolet;
+}
+
 .news-card
 {
-    background-color: #ffe9ec;
+    /* background-color: #ffe9ec; */
+    /* background-color: #f5f5f5; */
     padding: 1.6rem 1rem;
     margin-bottom: 1rem;
     line-height: 2rem;
+    box-shadow: rgba(112, 120, 122, 0.1) 0px 4px 12px;
 }
 
 .news-card h4 ,p
@@ -106,42 +113,12 @@ a
 {
     border: none;
     outline: none;
-    background-color: rgb(87, 84, 84);
-    padding: 0.1rem 0.6rem;
-    color: white;
-    letter-spacing: 1px;
-}
-
-.toggle-switch
-{
-    background-color: black;
-    width: 4rem;
-    cursor: pointer;
-    border-radius: 5px;
-
-}
-
-.switch
-{
-    color: white;
-    text-align: center;
-    transition: all 0.3s ease;
-}
-
-.bi{
-    font-size: 1.6rem;
-} 
-
-.on
-{
+    padding: 0.2rem 0.8rem;
     color: black;
-   
+    letter-spacing: 2px;
+    background-color: #f5f5f5;
 }
 
-.off
-{
-   
-    color: white;
-}
+
 
 
